  * Install openssh-server cleanly LP: #293039
  * Xen kernel and ramdisk are now dynamically discovered rather than
    hard coded
  * Add --xen-kernel and --xen-ramdisk to override automatic discovery
  * Add --net-virtio and --net-bridge option to libvirt plugin
  * The libvirt plugin now errors out if used with something else than KVM, as
    nothing else is supported yet.
  
  [ Chuck Short ]
  * Add retry option when uploading to Amazon
  * Install server and standard seed by default
  * Add ec2 examples for first login and first boot

  
  [ Eric Hammond ]
  * Fix post_install bugs LP: #292888, LP: #292891 & LP: #292901

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Thu, 17 Oct 2008 23:56:33 -0400

vm-builder (0.9-0ubuntu3) intrepid; urgency=low

  [ Johan Euphrosine ]
  * Fix exception when suite provided does not exist (LP: #281801) 
    and provide unit test for it.

  [ Chuck Short ]
  * Added parameters required for EC2 plugin.
  * Use ec2_name instead of hostname when submitting an AMI.
  * Update xen_kernel_path and xen_ramdisk_path for intrepid.
  * Default to amazon kernels/ramdisk pairs for now.
  * Split out ec2 module into its own package. (LP: #284762)

  [ Nicolas Barcet ]
  * Error out if domain is undefined (LP: #280125)
  * Fix --dest so that it is actually used now (LP: #280091)
  * Fix -c handling, values are now used (LP: #279159)
  * Create /var/run/network to fix bug LP: #276365
  * Handle fsimage type vms (Xen) in fstab and (hopefully) libvirt  (LP: #282109)
  * Components where not parsed correctly (LP: #283263)
  * preflight_check() was called twice in a row in vm.py for no aparant
    reasons
  * Change default suite to intrepid
  * Intrepid needs groot=uuid, else update-grub tries to outsmart us later on
    and it won't boot as it cannot guess the uuid right.
  * Couple fixes when calling devletters, which is a function
  * Double parenthesis removed in devicemap.tmpl
  * Added function isDomain to fix bug LP: #284746