@@ -1,4 +1,0 @@
-/dev/sda1 / ext3 defaults 1 1
-/dev/sdb /mnt ext3 defaults 0 0
-none /proc proc defaults 0 0
-none /sys sysfs defautls 0 0
